Bug 223478 - Spam status header don't work anymore
Summary: Spam status header don't work anymore
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.5
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-01-19 21:52 UTC by Thomas McGuire
Modified: 2010-01-22 21:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 21:52:19 UTC
The spam status headers in the fancy header style don't seem to work anymore, the status meter is not displayed correctly.
Comment 1 Thomas McGuire 2010-01-22 21:21:54 UTC
SVN commit 1078759 by tmcguire:

Allow data URLs as well, since they are local.
This fixes KMail's spam status not being shown.

BUG: 223478


 M  +2 -1      accessmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1078759