Allow data URLs as well, since they are local. This fixes KMail's spam status not being shown.

BUG: 223478

svn path=/trunk/KDE/kdelibs/; revision=1078759